Fixed events overlapping through float not clearing properly.

--- a/app/assets/stylesheets/modules/_events.sass
+++ b/app/assets/stylesheets/modules/_events.sass
@@ -24,7 +24,6 @@
       float: left
 
     .event-icon
-      clear: both
       padding-right: 1.2rem
 
       i
@@ -41,3 +40,6 @@
 
       p
         margin: 1rem 0 0 0
+
+  .clear
+    clear: both
